--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.1.0/dist/aframe-extras.min.js"></script>
 </head>
 <body>
-    <a-scene>
-        <a-entity fbx-model="src: url(https://mannymeadows.github.io/Noosa/models/FBX-DEMO.fbx);" material="color: red" crossorigin="anonymous">
-            <a-sky color="#ECECEC"></a-sky>
-        </a-entity>
+    <a-scene vr-mode-ui="enabled: false"
+             embedded
+             renderer="logarithmicDepthBuffer: true;"
+             arjs="sourceType: webcam; debugUIEnabled: false;">
+        <a-nft type="nft"
+               url="<path-to-your-image-descriptors>"
+               smooth="true"
+               smoothcount="10"
+               smoothtolerance=".01"
+               smooththreshold="5">
+            <a-entity gltf-model="Models/plane.gltf"
+                      scale="1 1 1"
+                      position="100 100 0">
+            </a-entity>
+        </a-nft>
+        <a-entity camera></a-entity>
     </a-scene>
+
 </body>
 </html>
