--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
              renderer="logarithmicDepthBuffer: true;"
              arjs="sourceType: webcam; debugUIEnabled: false;">
         <a-nft type="nft"
-               url="<path-to-your-image-descriptors>"
                smooth="true"
                smoothcount="10"
                smoothtolerance=".01"
                smooththreshold="5">
-            <a-entity gltf-model="Models/plane.gltf"
+            <a-entity fbx-model="src: url(/Models/C127/C127.fbx);"
                       scale="1 1 1"
-                      position="100 100 0">
+                      position="50 0 -50">
             </a-entity>
         </a-nft>
         <a-entity camera></a-entity>
