--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                smooththreshold="5">
             <a-entity fbx-model="src: url(/Models/C127/C127.fbx);"
                       scale="1 1 1"
-                      position="50 0 -50">
+                      position="50 0 -50"
+                      crossorigin="anonymous">
             </a-entity>
         </a-nft>
         <a-entity camera></a-entity>
